fix spacing

--- a/themes/soctor-who-theme/static/css/desktop.css
+++ b/themes/soctor-who-theme/static/css/desktop.css
@@ -45,8 +45,12 @@ div#split div {
     padding-top: 0;
 }
 
-div#split h2 {
+div h2 {
     margin-top: 15px;
+    margin-bottom: 5px;
+}
+
+div h3 {
     margin-bottom: 5px;
 }
 
